# right-tail

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: right-tail.md
demos/django-dynamo/: README.md  requirements.txt
demos/django-dynamo/config/: settings.py  urls.py
demos/django-dynamo/store/: dynamo.py  models.py  serializers.py  urls.py  views.py
demos/django-dynamo/store/tests/: test_dynamo.py
demos/react-redux/: README.md  package.json
demos/react-redux/src/api/: auth.ts
demos/react-redux/src/components/: LoginForm.tsx  ProductList.tsx
demos/react-redux/src/store/: authSlice.ts  productsSlice.ts
right_tail/: __init__.py  cli.py  git.py  models.py  stats.py
right_tail/agents/: evaluator.py  writer.py
right_tail/modes/: gaussian.py  iterative.py
